crude hack to fix spam-pm recipient list overflow problem

--- a/mdc3/media/css/site.css
+++ b/mdc3/media/css/site.css
@@ -119,6 +119,11 @@ table.thread_list td.count {
     text-align: center;
 }
 
+div.recipientlist {
+    max-width: 12em;
+    overflow: hidden;
+}
+
 div.body, div.row2, div.my_post {
     padding: 4px;
 }
